Kubernetes/Longhorn/authentik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: authentik-middleware
    namespace: longhorn-system
spec:
    forwardAuth:
        address: http://ak-outpost-longhorn-system.authentik:9000/outpost.goauthentik.io/auth/traefik
        trustForwardHeader: true
        authResponseHeaders:
            - X-authentik-username
            - X-authentik-groups
            - X-authentik-entitlements
            - X-authentik-email
            - X-authentik-name
            - X-authentik-uid
            - X-authentik-jwt
            - X-authentik-meta-jwks
            - X-authentik-meta-outpost
            - X-authentik-meta-provider
            - X-authentik-meta-app
            - X-authentik-meta-version
