Kubernetes/Longhorn/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.xxx.com`)
      kind: Rule
      middlewares:
        - name: authentik-middleware
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-certificate-secret
